--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Camila Ortega</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h3>Portfolio</h3>
+
+    <div class="container">
+        <section id="bio">
+            <h1>Camila Ortega</h1>
+            <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dapibus dui vel ipsum pretium, quis mattis justo imperdiet. Duis suscipit, eros a porttitor ultrices, mauris metus placerat nisi, imperdiet tempor arcu dui a ligula. Nullam ut eros quam. Donec eu volutpat nisi. Proin viverra iaculis rutrum. Mauris eu dignissim nisi, id tristique metus.</h3>
+        </section>
+        <section id="code">
+            <h3>Com o que programo:</h3>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+            </ul>
+        </section>
+        <section id="projects">
+            <h3>Meus projetos:</h3>
+            <ul>
+                <li>
+                    <img src="https://via.placeholder.com/200x100" alt="">
+                    <p>App To Do's</p>
+                    <p>App gerenciador de tarefas</p>
+                    <a href="app-to-dos/">Ver projeto</a>
+                </li>
+            </ul>
+        </section>
+    </div>
     
 </body>
 </html>
